<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_screen"
        android:layout_width="match_parent"
        android:layout_height="600dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/load_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/load_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/load_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/play_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/play_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/clone_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/load_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/clone_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/clone_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/play_button"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>